--- a/web/index.html
+++ b/web/index.html
@@ -29,10 +29,17 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>quiz_app</title>
+  <title>Quiz App</title>
   <link rel="manifest" href="manifest.json">
+
+  <!-- Firebase Configuration -->
+  <script type="module" src="firebase-config.js"></script>
 </head>
 <body>
+  <!-- Firebase SDKs -->
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-app-compat.js"></script>
+  <script src="https://www.gstatic.com/firebasejs/10.7.0/firebase-auth-compat.js"></script>
+
   <script src="flutter_bootstrap.js" async></script>
 </body>
 </html>
